--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,11 +8,27 @@
         <h1>RiverSurf</h1>
     </div>
     <div class="header__search">
+        <form class="example-form">
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Number</mat-label>
+                <input type="text"
+                       placeholder="Pick one"
+                       aria-label="Number"
+                       matInput
+                       [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete">
+                    <mat-option>
+
+                    </mat-option>
+                </mat-autocomplete>
+            </mat-form-field>
+        </form>
         <input type="text"
                name="search"
                placeholder="Search events or riders"
                autocomplete="off"
         >
+
     </div>
     <rs-navigation></rs-navigation>
 </mat-toolbar>
