Autocomplete Search Results: Icons in blue

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,4 +119,8 @@ snack-bar-container {
         font-size: .75rem;
         margin-left: .75rem;
     }
+
+    mat-icon {
+        color: $color-primary;
+    }
 }
