--- a/src/app/surf-event/weather/weather.component.html
+++ b/src/app/surf-event/weather/weather.component.html
@@ -1,10 +1,12 @@
-<mat-card>
+<!--<mat-card>
     <mat-card-title>{{weather.location}}</mat-card-title>
     <mat-card-content>
         <mat-spinner *ngIf="loading"></mat-spinner>
         <mat-grid-list *ngIf="!loading" cols="2" rowHeight="50px">
             <mat-grid-tile>
-                <img alt="Weather symbol" src="./assets/weather/{{weather.weatherSymbol}}.png">
+                <img alt="Weather symbol"
+                     src="./assets/weather/{{weatherIconStyle}}/{{weather.weatherSymbol | weatherIcon}}.svg"
+                     title="{{weather.weatherSymbol | weatherCondition}}">
             </mat-grid-tile>
             <mat-grid-tile class="water">
                 <mat-icon>waves</mat-icon>
@@ -20,6 +22,26 @@
         </mat-grid-list>
     </mat-card-content>
 </mat-card>
+-->
 
-
-
+<mat-card class="weather__card">
+    <mat-card-title-group>
+        <mat-card-title>{{weather.location}}</mat-card-title>
+        <mat-card-subtitle>{{weather.weatherSymbol | weatherCondition}}</mat-card-subtitle>
+        <img mat-card-md-image alt="Weather symbol"
+             src="./assets/weather/{{weatherIconStyle}}/{{weather.weatherSymbol | weatherIcon}}.svg">
+    </mat-card-title-group>
+    <mat-card-content class="weather__card__air-water">
+        <span class="water">
+            <mat-icon>waves</mat-icon>
+            {{weather.waterTemperature}} °C
+        </span>
+        <span class="air">
+            {{weather.airTemperature}} °C
+        </span>
+        <span class="water">
+            <mat-icon>waves</mat-icon>
+            {{weather.waterFlow}} m³/s
+        </span>
+    </mat-card-content>
+</mat-card>
