--- a/src/app/surf-event/weather/weather.component.scss
+++ b/src/app/surf-event/weather/weather.component.scss
@@ -1,22 +1,29 @@
 @import "variables";
 
-.mat-card {
-    margin: 20px;
-    max-width: 300px;
-}
-
 .mat-progress-spinner {
     margin: auto auto;
 }
 
-.air {
-    color: $color-text-1;
-}
+.weather__card {
+    margin-bottom: 1rem;
 
-.water {
-    color: $color-water;
-}
 
-.mat-grid-list {
-    font-size: large;
+    &__air-water {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+
+        .air {
+            color: $color-text-1;
+            font-size: 1.2rem;
+        }
+
+        .water {
+            color: $color-water;
+        }
+
+        mat-icon {
+            vertical-align: middle;
+        }
+    }
 }
