Sort winners and display trophy in final round, add selected rider to URL and load from query params

--- a/src/app/home/event-card/event-card.component.html
+++ b/src/app/home/event-card/event-card.component.html
@@ -18,6 +18,7 @@
             <a mat-raised-button
                *ngFor="let division of surfEvent.divisions"
                class="division-{{division}}"
+               (click)="onClick($event)"
                routerLink="/event/{{surfEvent.name | slugify}}-{{surfEvent.id}}/competition/{{ division }}">
                 {{division | titlecase}}
             </a>
