--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -89,6 +89,11 @@
     &__type {
         color: $color-primary;
     }
+
+    &__winner {
+        margin-right: .5rem;
+        color: #FBC02D;
+    }
 }
 
 .no-hover{
