--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -15,6 +15,10 @@
         gap: .5rem;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .division-selector {
         border: none;
 
