--- a/src/app/shared/error/error.component.html
+++ b/src/app/shared/error/error.component.html
@@ -1,1 +1,16 @@
+
+<p>Sorry mate, we couldn't find the path to:</p>
+<p>PATH / COMPONENT</p>
+<p>Maybe you can go back to your previous locations:</p>
+<ul>
+    <li>Location 1</li>
+    <li>Location 2</li>
+    <li>Location 3</li>
+</ul>
+
+
+
+
+
+
 <p>error works!</p>
