Move HomeComponent to Core Module, EventCardComponent to Shared Module

--- a/src/app/shared/event-card/event-card.component.scss
+++ b/src/app/shared/event-card/event-card.component.scss
@@ -1,6 +1,6 @@
-@import "mixins";
-@import "responsive";
-@import "variables";
+@import "src/styles/mixins";
+@import "src/styles/responsive";
+@import "src/styles/variables";
 
 .event__card {
     width: 400px;
