--- a/src/app/core/home/home.component.scss
+++ b/src/app/core/home/home.component.scss
@@ -1,5 +1,5 @@
-@import "mixins";
-@import "responsive";
+@import "src/styles/mixins";
+@import "src/styles/responsive";
 
 .content {
     width: 100%;
