--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -69,7 +69,7 @@
 }
 
 .mat-button-toggle-checked {
-    filter: brightness(0.75);
+    background-color: darken($color-grey-light-2, 15);
 }
 
 .mat-button-toggle-standalone.mat-button-toggle-appearance-standard, .mat-button-toggle-group-appearance-standard {
