--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -127,7 +127,7 @@
     }
 
     @include for-large() {
-        position: fixed;
+        position: absolute;
         bottom: 10px;
         right: 10px;
         margin: 0;
