Detect window resize and redraw lines & highlighted Rider, fix horizontal-scrolling issue

--- a/src/app/surf-event/result-view/result-view.component.html
+++ b/src/app/surf-event/result-view/result-view.component.html
@@ -21,7 +21,7 @@
 </ng-container>
 
 
-<div class="relative-container">
+<div (window:resize)="onResize($event)" class="relative-container">
     <div class="result-container" *ngIf="!isLoading">
         <div class="round" *ngFor="let round of competition.rounds">
             <h2 class="round__title">{{ getRoundLabel(round.id) | uppercase}}</h2>
