--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -125,6 +125,10 @@
     justify-content: center;
     @include bottom-space;
 
+    @include respond(small) {
+        margin-bottom: 5rem;
+    }
+
     @include for-medium-and-large() {
         gap: 1.5rem;
     }
