--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -27,7 +27,7 @@
         <button
             *ngIf="showControls"
             [disabled]="currentIndex >= elements.length -1"
-            (click)="goToNex()"
+            (click)="goToNext()"
         >
             <mat-icon>arrow_forward_ios</mat-icon>
         </button>
