--- a/src/app/shared/error/error.component.html
+++ b/src/app/shared/error/error.component.html
@@ -1,13 +1,19 @@
-
-<p>Sorry mate, we couldn't find the path to:</p>
-<p>PATH / COMPONENT</p>
-<p>Maybe you can go back to your previous locations:</p>
-<ul>
-    <li>Location 1</li>
-    <li>Location 2</li>
-    <li>Location 3</li>
-</ul>
-
-
-
-<p>error works!</p>
+<div class="error-container">
+    <div class="error-container__message">
+        This is the message
+    </div>
+    <div class="error-container__history">
+        <div class="error-containter__history-item">
+            This is the history 1
+        </div>
+        <div class="error-containter__history-item">
+            This is the history 2
+        </div>
+        <div class="error-containter__history-item">
+            This is the history 3
+        </div>
+    </div>
+    <div class="error-container__game">
+        This is the game
+    </div>
+</div>
