--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -64,6 +64,10 @@
 
 
 <ng-container *ngIf="upcomingSurfEvents$ | async as upcomingSurfEvents">
+    <div>
+        <p routerLink="/page-not-found">Navigate to errorous page (direct)</p>
+        <p routerLink="/sadfaaggda">Navigate to errorous page (indirect)</p>
+    </div>
     <div class="map">
         <h2>Where to find <span class="underline">our Jams</span></h2>
         <div class="event__map">
