--- a/src/app/shared/error/error.component.scss
+++ b/src/app/shared/error/error.component.scss
@@ -1,17 +1,46 @@
 @import "responsive";
 @import "mixins";
 
-.error-container{
+.error-container {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    margin: 2rem;
 
-    &__message{
-        align-self: center;
+    @include respond(small) {
+        @include bottom-space;
     }
 
-    &__history{
+    &__message {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-self: center;
+        gap: 1rem;
+    }
+
+    &__animation {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-rider {
+            animation-name: rideIn;
+            animation-duration: 3s;
+            animation-fill-mode: forwards;
+        }
+
+        &-waves{
+            position: relative;
+            top: -15px;
+        }
+    }
+
+    &__history {
         display: flex;
         width: 100%;
         justify-content: space-around;
@@ -21,7 +50,25 @@
         }
     }
 
-    &__game{
+    &__game {
 
+    }
+}
+
+.underline {
+    @include underline-magical;
+}
+
+@keyframes rideIn {
+    0% {
+        transform: translateX(-200%)
+    }
+    90% {
+        transform: translateX(0) translateY(0);
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translateY(50%);
+        opacity: 0;
     }
 }
