--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -65,6 +65,7 @@
 
 <ng-container *ngIf="upcomingSurfEvents$ | async as upcomingSurfEvents">
     <div>
+        <!-- ToDo: REMOVE -->
         <p routerLink="/page-not-found">Navigate to errorous page (direct)</p>
         <p routerLink="/sadfaaggda">Navigate to errorous page (indirect)</p>
     </div>
