--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -64,7 +64,7 @@
 
 
 <ng-container *ngIf="upcomingSurfEvents$ | async as upcomingSurfEvents">
-    <div class="map">
+    <div *ngIf="!isOffline" class="map">
         <h2>Where to find <span class="underline">our Jams</span></h2>
         <div class="event__map">
             <google-map
