--- a/src/app/surf-event/surf-event/competition/competition.component.scss
+++ b/src/app/surf-event/surf-event/competition/competition.component.scss
@@ -1,9 +1,43 @@
 @import "responsive";
+@import "variables";
 
 .competition-container {
-    padding: 2rem;
+    padding: 1rem 2rem;
 
     @include respond(small) {
         padding: .1rem;
     }
+}
+
+.switch-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+
+    &__view {
+        margin-right: 1rem;
+    }
+
+    &__item {
+        color: $color-white;
+        border-radius: 4px;
+
+        &--male {
+            background-color: $color-male;
+        }
+
+        &--female {
+            background-color: $color-female;
+        }
+
+        &--kids {
+            background-color: $color-kids;
+        }
+
+        &--disabled {
+            display: none;
+        }
+    }
+
+
 }
