--- a/src/app/shared/error/error.component.html
+++ b/src/app/shared/error/error.component.html
@@ -22,7 +22,7 @@
     <h2 *ngIf="routerHistory.length > 0">Your last <span class="underline">destinations</span>:</h2>
     <div *ngIf="routerHistory.length > 0" class="error-container__history">
         <div class="error-container__history-item" *ngFor="let history of routerHistory; first as isFirst">
-            <mat-card routerLink="{{history.url}}">
+            <mat-card [routerLink]="history.url" [queryParams]="history.queryParams">
                 <mat-icon *ngIf="isFirst && errorResource">thumb_down</mat-icon>
                 {{history.description}}
             </mat-card>
