--- a/src/app/riders/riders.component.html
+++ b/src/app/riders/riders.component.html
@@ -51,7 +51,7 @@
                         </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="name">
+                    <ng-container matColumnDef="lastName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header="lastName">Name</th>
                         <td mat-cell *matCellDef="let rider">{{ rider.lastName }} {{ rider.firstName }}</td>
                     </ng-container>
